# material-components-qml

./: CMakeLists.txt  LICENSE  README.md  deploy.bat  log-0.3.9.txt  log-0.4.1.txt
components/: CircularProgress.qml  LinearProgress.qml  NavigationBar.qml
examples/: CMakeLists.txt  Main.qml  main.cpp
examples/pages/: AboutPage.qml  ColorPage.qml  ComponentsPage.qml  HomePage.qml  IconPage.qml  NavigationPage.qml  SettingsPage.qml  TypographyPage.qml  WidgetsPage.qml
examples/widgets/: AnalogClockWidget.qml  BatteryWidget.qml  ClockWidget.qml  DesktopWidgetWindow.qml  DraggableWidgetWrapper.qml  GhostClockWidget.qml  GoogleSearchBar.qml  SleepyFaceClockWidget.qml
pages/: ComponentsPage.qml  HomePage.qml  NavigationPage.qml
scaffold/: create_project.py  scaffold.ps1
scaffold/templates/basic/: CMakeLists.txt  Main.qml
scaffold/templates/basic/pages/: HomePage.qml  SettingsPage.qml
scaffold/templates/basic/src/: app_icon.rc  main.cpp
scaffold/templates/basic/src/App/: Main.qml
scaffold/templates/basic/src/App/pages/: HomePage.qml  SettingsPage.qml
src/: CMakeLists.txt  Theme.qml  md3Config.cmake.in
src/App/: AppRoot.qml  CMakeLists.txt  Main.qml  main.cpp
src/App/pages/: AboutPage.qml  ColorPage.qml  ComponentsPage.qml  HomePage.qml  IconPage.qml  NavigationPage.qml  ProPage.qml  SettingsPage.qml  TypographyPage.qml  WidgetsPage.qml
src/App/pages/extras/: ChartsPage.qml  DataGridPage.qml  GanttPage.qml  HotReloadPage.qml  LivePreview.qml  MarkdownPage.qml  MathSymbolsPage.qml  NodeGraphPage.qml  ReportDesignerPage.qml  SerialPortDemoCard.qml  VideoWallPage.qml
src/App/widgets/: AnalogClockWidget.qml  BatteryWidget.qml  ClockWidget.qml  DesktopWidgetManager.qml  DesktopWidgetWindow.qml  DraggableWidgetWrapper.qml  ExternalWidgetViewer.qml  GhostClockWidget.qml  GoogleSearchBar.qml  SleepyFaceClockWidget.qml
src/Core/: CMakeLists.txt
src/Core/Controls/: BlurCard.qml  Breadcrumb.qml  Button.qml  CanvasBarChart.qml  CanvasLineChart.qml  CanvasPieChart.qml  Card.qml  Carousel.qml  Checkbox.qml  Chip.qml  CircularProgress.qml  ColorPicker.qml  ComboBox.qml  DataTable.qml  DatePicker.qml  Dialog.qml  FAB.qml  FabMenu.qml  IconButton.qml  IndexBackground.qml  LinearProgress.qml  LoadingIndicator.qml  Menu.qml  NavigationBar.qml  NavigationDrawer.qml  NavigationRail.qml  RadioButton.qml  Ripple.qml  ScrollBar.qml  SegmentedButton.qml  SideSheet.qml  Slider.qml  Snackbar.qml  Switch.qml  Tabs.qml  TextField.qml  TimePicker.qml  ToolTip.qml  TopAppBar.qml
src/Core/Cpp/: stylemanager.cpp  stylemanager.h
src/Core/Styles/: Theme.qml
src/Core/Styles/animations/: AnimatedWindow.qml
src/components/: CircularProgress.qml  ColorPicker.qml  LinearProgress.qml  LoadingIndicator.qml  Slider.qml  Switch.qml
